--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100%;
 }
 
 a {
@@ -13,4 +14,24 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.flex {
+  display: flex;
+  gap: 1rem;
+}
+ul {
+  list-style: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
+#__next {
+  height: 100%;
+}
+
+.footer {
+  width: 100%;
+  background: #b1b1b1;
 }
